--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography==46.0.1
 daphne==4.2.1
 Django==5.2.6
 django-cors-headers==4.8.0
+django-prometheus==2.4.1
 djangorestframework==3.16.1
 hyperlink==21.0.0
 idna==3.10
